# utxo-global-tgbot

./: .env.example  .gitignore  Cargo.toml  README.md  api.py  bot.py  config.toml  db.py  docker-compose.yml  init_db.py  llama.py  requirements.txt  tgbot.py
.github/workflows/: api.yml  release.yml  tgbot.yml
api/: .env.example  Cargo.toml  rustfmt.toml
api/src/: lib.rs
api/src/repositories/: chatbot.rs  db.rs  member.rs  mod.rs
api/src/serialize/: error.rs
k8s/: Dockerfile  Dockerfile.binary
migrations/: 20241231150328_init.sql  20250217085511_group.sql  20250227060151_tg_group_joinedc.sql  20250318081255_tg_group_admins.sql  20250415011734_tokens.sql  20250415031155_group_member.sql
src/: app.rs  config.rs  lib.rs
src/handlers/: member.rs  mod.rs  welcome.rs
src/libs/signer/: btc.rs  ckb.rs  doge.rs  evm.rs  joyid.rs  mod.rs  types.rs  verify.rs
src/models/: ckb.rs  member.rs  mod.rs  telegram.rs  token.rs
src/repositories/: ckb.rs  member.rs  mod.rs  telegram.rs  token.rs
src/serialize/: member.rs
src/services/: member.rs  telegram.rs
src/utils/: joyid.rs  mod.rs
system/: agent.service  tgbot.service
tgbot/: Dockerfile  README.md  config.py  db.py  init_db.py  requirements.txt
