[package]
name = "utxo-global-tgbot-api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
ckb-hash = "0.120.0"
ckb-sdk = "3.4.1"
ckb-types = "0.118.0"
ckb-jsonrpc-types = "0.118.0"
config = "0.15.4"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
once_cell = "1.20.2"
secp256k1 = "0.29.0"
serde = "1.0.217"
serde_derive = "1.0.217"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "migrate",
] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
tokio-pg-mapper = { version = "0.2.0", features = ["tokio-pg-mapper-derive"] }
tokio-pg-mapper-derive = "0.2.0"
pg_bigdecimal = { version = "0.1.5", features = ["serde"] }
tokio = "1.42.0"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.134"
env_logger = "0.11.6"
openssl = { version = "0.10.68", features = ["vendored"] }

[[bin]]
name = "chatbot"
path = "src/bin/chatbot.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"
